cmake_minimum_required(VERSION 2.8)
project( StereoMatching )
find_package( OpenCV REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++17")
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( stereo-matching stereo-matching.cpp stereo-matching.h)
target_link_libraries( stereo-matching ${OpenCV_LIBS})